# ARMO

./: .codecov.yml  ARMO.cpp  ARMO.hpp  ARMOConfig.h.in  CMakeLists.txt  LICENSE  README.md  convexes.h  spherical.h  vec.h
.github/workflows/: cmake.yml
algos/: BB.h  CMakeLists.txt  LiDAR_main.cpp  Lidar_utils.h  Lower_Bound.h
cmake/: ExternalGravity.cmake  ExternalLAStools.cmake  FindGJK.cmake  FindGRAVITY.cmake  FindIPOPT.cmake  FindVORO.cmake
